Work on the main nav structure and content states

--- a/project1.html
+++ b/project1.html
@@ -1,7 +1,7 @@
 <!-- <h3>Project 1</h3>
 <p>Details about Project 1.</p> -->
-<article>
-	<section class="column narrow">
+<article class="project">
+	<section class="column">
 		<h2>CommunityView Connect</h2>
 		<h5>
 			CommunityView is a web-based mapping application that enables local
@@ -47,7 +47,7 @@
 			</section>
 		</section>
 	</section>
-	<section class="column narrow">
+	<section class="column">
 		<h5>
 			Initial wireframes were created with Photoshop and prototyped using the
 			Marvel App.
@@ -75,7 +75,7 @@
 		>
 	</div>
 	<!-- </section> -->
-	<section class="column narrow">
+	<section class="column">
 		<h5>
 			Final screens were created in Photoshop. Image assets and reference were
 			provided to a lead developer for assembly using XCode and PhoneGap.
@@ -100,7 +100,7 @@
 			events</h6
 		>
 	</section>
-	<section class="column narrow">
+	<section class="column">
 		<h3>What I Learned</h3>
 		<h5>
 			This project was the company's first mobile application and everyone was
