Added LandVision Connect to projects Moved CSS into partials

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 								target="_blank"
 								aria-label="LinkedIn"
 								><i
-									class="fab fa-linkedin"
+									class="fab fa-linkedin fa-lg"
 									aria-hidden="true"
 								></i
 							></a>
@@ -49,7 +49,7 @@
 								target="_blank"
 								aria-label="GitHub"
 								><i
-									class="fab fa-github"
+									class="fab fa-github fa-lg"
 									aria-hidden="true"
 								></i
 							></a>
@@ -57,7 +57,7 @@
 								href="mailto:your-email@example.com"
 								aria-label="Email"
 								><i
-									class="fas fa-envelope"
+									class="fas fa-envelope fa-lg"
 									aria-hidden="true"
 								></i
 							></a>
@@ -71,13 +71,15 @@
 					<a
 						href="#resume"
 						data-tab="resume"
-						>Resume&#39;</a
 					>
+						Resume&#39;
+					</a>
 					<a
 						href="#projects"
 						data-tab="projects"
-						>Portfolio</a
 					>
+						Portfolio
+					</a>
 				</div>
 			</nav>
 			<div
@@ -88,35 +90,39 @@
 					<button
 						class="tab-button"
 						data-tab="project1"
-						>CommunityView</button
 					>
+						Project 1
+					</button>
 					<button
 						class="tab-button"
 						data-tab="project2"
-						>Project 2</button
 					>
+						Project 2
+					</button>
 					<button
 						class="tab-button"
 						data-tab="project3"
-						>Project 3</button
 					>
+						Project 3
+					</button>
 					<button
 						class="tab-button"
 						data-tab="project4"
-						>Project 4</button
 					>
+						Project 4
+					</button>
 					<button
 						class="tab-button"
 						data-tab="project5"
-						>Project 5</button
 					>
+						Project 5
+					</button>
 				</div>
 				<select
 					id="project-dropdown"
 					class="tab-dropdown"
 					aria-label="Select Project"
 				>
-					<option value="resume">Resume&#39;</option>
 					<option value="project1">Project 1</option>
 					<option value="project2">Project 2</option>
 					<option value="project3">Project 3</option>
@@ -132,17 +138,15 @@
 			></section>
 
 			<section id="projects">
-				<!-- <h2>Projects</h2> -->
-				<!-- <div class="tabs"> -->
 				<div
 					class="tab-content"
 					id="project1"
-					data-template="project1.html"
+					data-template="lvconnect.html"
 				></div>
 				<div
 					class="tab-content"
 					id="project2"
-					data-template="project2.html"
+					data-template="communityview.html"
 				></div>
 				<div
 					class="tab-content"
