--- a/communityview.html
+++ b/communityview.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <article class="project">
-	<section class="column">
+	<section class="project-intro">
 		<h2>CommunityView Connect</h2>
 		<h5>
 			CommunityView is a web-based mapping application that enables local
@@ -8,13 +8,13 @@
 			access by their residents.
 		</h5>
 	</section>
-	<section class="project-header row wrap justify-center">
+	<div class="project-header">
 		<img
 			src="./images/gc-connect/main.png"
 			alt="CommunityView Screenshot"
 			class="lightbox-trigger"
 		/>
-		<section class="project-description column">
+		<div class="project-description">
 			<span>
 				<label>Year</label>
 				<h5>2013</h5>
@@ -36,15 +36,15 @@
 				The application's primary workflow allowed residents to invest in their
 				community by reporting and tracking issues around their city.
 			</h6>
-		</section>
-	</section>
-	<section class="column">
+		</div>
+	</div>
+	<section class="project-section">
 		<h5>
 			Initial wireframes were created with Photoshop and prototyped using the
 			Marvel App.
 		</h5>
 	</section>
-	<div>
+	<div class="project-image">
 		<img
 			src="./images/gc-connect/lofi-1.png"
 			alt="Lo Fidelity 1 Screenshot"
@@ -55,7 +55,7 @@
 			Low-fidelity wireframes for "New Report" workflow
 		</h6>
 	</div>
-	<div>
+	<div class="project-image">
 		<img
 			src="./images/gc-connect/lofi-2.png"
 			alt="Lo Fidelity 2 Screenshot"
@@ -66,13 +66,13 @@
 			Low-fidelity wireframes for "View/Edit Reports" workflow
 		</h6>
 	</div>
-	<section class="column">
+	<section class="project-section">
 		<h5>
 			Final screens were created in Photoshop. Image assets and reference were
 			provided to a lead developer for assembly using XCode and PhoneGap.
 		</h5>
 	</section>
-	<div>
+	<div class="project-image">
 		<img
 			src="./images/gc-connect/hifi-1.png"
 			alt="Hi Fidelity 1 Screenshot"
@@ -81,7 +81,7 @@
 		/>
 		<h6 class="is-centered"> Primary 'Issue Reporting' workflow </h6>
 	</div>
-	<div>
+	<div class="project-image">
 		<img
 			src="./images/gc-connect/hifi-2.png"
 			alt="Hi Fidelity 2 Screenshot"
@@ -92,7 +92,7 @@
 			Access to additional city services - locations, contacts, projects, events
 		</h6>
 	</div>
-	<section class="column">
+	<section class="project-section">
 		<h3>What I Learned</h3>
 		<h5>
 			This project was the company's first mobile application and everyone was
