--- a/lvconnect.html
+++ b/lvconnect.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <article class="project">
-	<section class="column">
+	<section class="project-intro">
 		<h2>LandVision Connect</h2>
 		<h5>
 			LandVision is a cloud-based mapping application that helps commercial real
@@ -8,13 +8,13 @@
 			opportunities.​​​​​​​
 		</h5>
 	</section>
-	<section class="project-header row wrap justify-center">
+	<div class="project-header">
 		<img
 			src="./images/lv-connect/main.png"
 			alt="LandVision Connect Screenshot"
 			class="lightbox-trigger"
 		/>
-		<section class="project-description column">
+		<div class="project-description">
 			<span>
 				<label>Year</label>
 				<h5>2017</h5>
@@ -28,7 +28,7 @@
 				<h5>Myself and a Lead Developer</h5>
 			</span>
 			<h6>
-				The company's flagship product was an established SaaS application that
+				The company's flagship product was an established SaaS application that
 				had existed on the desktop for many years.
 			</h6>
 			<h6>
@@ -37,9 +37,9 @@
 				capture and sync their own data (notes, photos, etc.) for use within the
 				desktop product.
 			</h6>
-		</section>
-	</section>
-	<section class="column">
+		</div>
+	</div>
+	<section class="project-section">
 		<h5>
 			The project began life in 2013 as 'The Broker App' before being put on
 			hold and picked up again for a 2017 release. The initial concept was to
@@ -48,7 +48,7 @@
 			with their contacts and add insights during site visits.
 		</h5>
 	</section>
-	<section class="column">
+	<section class="project-section">
 		<h5>
 			I sketched some screens on the back of index cards to account for the
 			primary data elements (locations, contacts), the container that linked
@@ -57,7 +57,7 @@
 			review.
 		</h5>
 	</section>
-	<div>
+	<div class="project-image">
 		<img
 			src="./images/lv-connect/wires.png"
 			alt="Wires Screenshot"
@@ -68,7 +68,7 @@
 			Original paper-prototype (Main screen, Contact, Location, Project, Notes)
 		</h6>
 	</div>
-	<section class="column">
+	<section class="project-section">
 		<h5>
 			After review, the decision was made to simplify things by removing the
 			concept of 'Project'. The application become more property-focused with
@@ -76,7 +76,7 @@
 			contacts, define associations between them, and add notes and media.
 		</h5>
 	</section>
-	<section class="column">
+	<section class="project-section">
 		<h5>
 			Also, around this time, I had began work on Digital Map Products' initial
 			UI Library. Typography, Color Palettes, and Iconography were being
@@ -86,7 +86,7 @@
 			iteration was created using HTML and the new CSS.
 		</h5>
 	</section>
-	<div>
+	<div class="project-image">
 		<img
 			src="./images/lv-connect/lofi-1.png"
 			alt="Lo Fidelity 1 Screenshot"
@@ -97,7 +97,7 @@
 			HTML templates using CSS compiled from SASS partials
 		</h6>
 	</div>
-	<section class="column">
+	<section class="project-section">
 		<h5>
 			After incorporating feedback received on the second iteration from
 			engineering and from existing LandVision customers, development began. The
@@ -109,7 +109,7 @@
 			syncing the user's data.
 		</h5>
 	</section>
-	<section class="column">
+	<section class="project-section">
 		<h5>
 			I worked on the 1.0.0 release with a team comprised of a lead developer
 			and product manager to develop the production templates below. PhoneGap
@@ -118,7 +118,7 @@
 			and Ghostlab.
 		</h5>
 	</section>
-	<div>
+	<div class="project-image">
 		<img
 			src="./images/lv-connect/hifi-1.png"
 			alt="Hi Fidelity 1 Screenshot"
@@ -129,7 +129,7 @@
 			Home Screen, Location Summary, Layers UI, App Menu
 		</h6>
 	</div>
-	<div>
+	<div class="project-image">
 		<img
 			src="./images/lv-connect/hifi-2.png"
 			alt="Hi Fidelity 2 Screenshot"
@@ -140,7 +140,7 @@
 			Property Detail Screens, Saved Sites, Contacts, Notes, and Media
 		</h6>
 	</div>
-	<section class="column">
+	<section class="project-section">
 		<h3>What I Learned</h3>
 		<h5>
 			As this project was completed over 2 phases that spanned multiple years, I
