--- a/index.html
+++ b/index.html
@@ -146,17 +146,17 @@
 				<div
 					class="tab-content"
 					id="project1"
-					data-template="lvconnect.html"
+					data-template="fieldforce.html"
 				></div>
 				<div
 					class="tab-content"
 					id="project2"
-					data-template="communityview.html"
+					data-template="lvconnect.html"
 				></div>
 				<div
 					class="tab-content"
 					id="project3"
-					data-template="project3.html"
+					data-template="communityview.html"
 				></div>
 				<div
 					class="tab-content"
