Added all existing projects into the build

--- a/index.html
+++ b/index.html
@@ -146,27 +146,27 @@
 				<div
 					class="tab-content"
 					id="project1"
-					data-template="fieldforce.html"
+					data-template="flan.html"
 				></div>
 				<div
 					class="tab-content"
 					id="project2"
-					data-template="lvconnect.html"
+					data-template="visual-design.html"
 				></div>
 				<div
 					class="tab-content"
 					id="project3"
-					data-template="communityview.html"
+					data-template="fieldforce.html"
 				></div>
 				<div
 					class="tab-content"
 					id="project4"
-					data-template="project4.html"
+					data-template="lvconnect.html"
 				></div>
 				<div
 					class="tab-content"
 					id="project5"
-					data-template="project5.html"
+					data-template="communityview.html"
 				></div>
 			</section>
 		</main>
