Added company logos to the Resume' / Professional Experience section.

--- a/index.html
+++ b/index.html
@@ -122,6 +122,12 @@
 					>
 						Project 5
 					</button>
+					<button
+						class="tab-button"
+						data-tab="project6"
+					>
+						Project 6
+					</button>
 				</div>
 				<select
 					id="project-dropdown"
@@ -133,6 +139,7 @@
 					<option value="project3">Project 3</option>
 					<option value="project4">Project 4</option>
 					<option value="project5">Project 5</option>
+					<option value="project6">Project 6</option>
 				</select>
 			</div>
 		</header>
@@ -167,6 +174,11 @@
 					class="tab-content"
 					id="project5"
 					data-template="communityview.html"
+				></div>
+				<div
+					class="tab-content"
+					id="project6"
+					data-template="logistics.html"
 				></div>
 			</section>
 		</main>
