Converted pixels to rational units

--- a/resume.html
+++ b/resume.html
@@ -2,11 +2,11 @@
 <article class="project">
 	<section class="project-section">
 		<h2>Professional Summary</h2>
-		<p
+		<h6
 			>Creative technologist with 30+ years of experience directing UX design,
 			UI engineering, application development, video game production, and
 			broadcast animation. Specializing in healthcare, logistics, real estate,
-			global information systems, e-commerce, and entertainment.</p
+			global information systems, e-commerce, and entertainment.</h6
 		>
 		<ul>
 			<li
