Added a case stufy for Logistics

--- a/logistics.html
+++ b/logistics.html
@@ -3,36 +3,47 @@
 	<section class="project-intro">
 		<h2>Logistics</h2>
 		<h5>
-			Designing enterprise products at scale requires organization, efficiency,
-			and predictability. I created a design system to provide guidance and
-			establish design principles to our product and development teams.
+			The more time you spend as a product designer working across different
+			industries, the more you realize that the problems you are solving are
+			often very similar. Each solution may result in various looks and use
+			different terms for the same old things, but the underlying issues that
+			we're working to solve are often very similar.
+		</h5>
+		<h5>
+			That's not to say that every industry isn't special in its own way.
+			However, the key to success in designing products or services is being
+			able to recognize common patterns across industries that lurk under the
+			veneer.
 		</h5>
 	</section>
 	<section class="project-section">
-		<h3>Graviton</h3>
+		<h3>What The Heck Is 'Reverse' Logistics?</h3>
 		<h5>
-			FLAN is LightBox's Design Language System for products and experiences.
-			With the LightBox Design Language as its foundation, the system consists
-			of working code, design tools, resources, and human interface guidelines.
+			While still hard at work on our healthcare platform, our team had the
+			opportunity to design a warehouse management system for a client that
+			provided reverse logistics services for a large retailer. The client was
+			struggling with their existing, ad-hoc inventory management process. Their
+			inefficiency was causing the retailer to question the accuracy of invoices
+			often resulting in delayed payments.
 		</h5>
 	</section>
 	<div class="project-image">
 		<img
-			src="./images/logistics/graviton-yard.png"
-			alt="Graviton Yard Screenshot"
+			src="./images/logistics/logistics-header.png"
+			alt="Logistics Header"
 			class="lightbox-trigger"
 			width="100%"
 		/>
-		<h6 class="is-centered"
-			>The main Property view for LightBox's initial product launch...built
-			entirely from components.</h6
-		>
+		<h6 class="is-centered">
+			Yard Management module. (showing configuration for multi-module,
+			multi-site)
+		</h6>
 	</div>
 	<div class="project-header">
 		<div class="project-description">
 			<span>
 				<label>Year</label>
-				<h5>2020</h5>
+				<h5>Begun 2023 (in active development)</h5>
 			</span>
 			<span>
 				<label>Role</label>
@@ -41,44 +52,193 @@
 			<span>
 				<label>Team</label>
 				<h5>
-					Myself, a Senior Designer, 2 principle developers who contributed to
-					code reviews, Javascript best practices, component testing, and
-					application build and deployment processes.
+					Myself, Lead Developer, Jr. Developer, Database Admin, Product
+					Manager, Industry Consultants
 				</h5>
 			</span>
 			<h6>
-				FLAN started in February of 2018 as a front-end platform for the next
-				generation of Digital Map Products' application suite. We altered course
-				during the summer of 2018 when DMP was acquired by LightBox and the
-				focus shifted to creating a design system that could be used across the
-				entire organization.
+				My logistics work began with a client request for an alternative to
+				managing thier business through a set of independent systems. Their data
+				was scattered and required manually moving business records between
+				tools. These manual processes resulted in discrepencies in their records
+				and eroded trust with the clients that the business served.
+				Decentralized and unstructured records prevented insight into business
+				performance, making maintaing their required metrics a challenge.
 			</h6>
 			<h6>
-				FLAN includes application theming capabilities, responsive flex layout,
-				and accessibily designed components. Based off the principles of atomic
-				design, FLAN provides the basic building blocks of a User Interface. Our
-				Component System is organized into atoms, blocks, elements, layouts, and
-				templates. Additionally this system showcases our Design Guidelines,
-				Colors, and Icon Library.
-			</h6>
-			<h6>
-				The Storybook for this system can be accessed
-				<a
-					href="https://kidg21.github.io/storybook/index.html?path=/story/design-guidelines-flan-design-system--page"
-					target="_blank"
-				>
-					here
-				</a>
-			</h6>
-			<h6>
-				The GitHub repository it is built from can be accessed
-				<a
-					href="https://github.com/kidg21/flan"
-					target="_blank"
-				>
-					here
-				</a>
+				I contributed to this project by gathering requirements, diagraming
+				primary workflows, crafting user stores, creating interactive
+				prototypes, and developing the front-end designb system in both Angular
+				and Flutter.
 			</h6>
 		</div>
 	</div>
+	<section class="project-section">
+		<h5>
+			The project kicked off with a weekend of on-site requirements gathering
+			where the team talked with staff members to learn what challenges they
+			faced and how we could help make their jobs easier. We observed their
+			daily operations for managing their warehouse and trailer inventories, and
+			the client walked us through the multiple systems they employed to collect
+			and share data.
+		</h5>
+		<h5>
+			After talking with the team, we found several problems with their daily
+			work. They had trouble keeping track of what was in inventory, what was on
+			each trailer, and making sure their different computer systems showed the
+			same information. Once we understood these issues, we concluded that a
+			more integrated approach to inventory management was needed. We decided to
+			apply our healthcare platform's principles toward resouce management to
+			create a more cohesive solution for their logistics operations.
+		</h5>
+		<div class="project-image">
+			<img
+				src="./images/logistics/hypervisor-flow-diagram.png"
+				alt="Hypervisor Flow Diagram"
+				class="lightbox-trigger"
+				width="100%"
+			/>
+			<h6 class="is-centered"> Warehouse Management System Flow Diagram </h6>
+		</div>
+		<h5>
+			Over the next few months, we worked with the client to build a simpler
+			system that solved their main problems. We created one central place to
+			track their inventory in real-time, and made it easy for workers to log
+			and update the contents of inbound and outbound trailers.
+		</h5>
+		<div class="project-image">
+			<img
+				src="./images/logistics/hypervisor-mobile.png"
+				alt="Hypervisor Mobile Screenshots"
+				class="lightbox-trigger"
+				width="100%"
+			/>
+			<h6 class="is-centered"> Mobile App - Production Views (Flutter) </h6>
+		</div>
+		<div class="project-image">
+			<img
+				src="./images/logistics/hypervisor-doors.png"
+				alt="Hypervisor Doors Screenshot"
+				class="lightbox-trigger"
+				width="100%"
+			/>
+			<h6 class="is-centered"> WebApp - Warehouse Door View (Angular) </h6>
+		</div>
+		<div class="project-image">
+			<img
+				src="./images/logistics/hypervisor-report.png"
+				alt="Hypervisor Report Screenshot"
+				class="lightbox-trigger"
+				width="100%"
+			/>
+			<h6 class="is-centered">
+				WebApp - Warehouse Shift Report View (Angular)
+			</h6>
+		</div>
+	</section>
+	<section class="project-section">
+		<h3>Reimagining The Logistics Process</h3>
+		<h5>
+			In early 2025, our team partnered with supply chain veterans to further
+			enhance our understanding of logistics operations. By collaborating with
+			experts in the field, we aimed to identify best practices and innovative
+			solutions that could be applied to challenges across the industry. During
+			this phase my role centered around insisting that our industry resources
+			think through every aspect of a supply chain and identify opportunities
+			for improvement. Their breakdowns were key in developing my user stories
+			that served as a North Star for all proposed designs, implementation, and
+			evaluation.
+		</h5>
+		<h5>
+			Managing warehouse operations is just one part of the logistics process.
+			Viewing supply chain operations from a single point of view quickly
+			revealed gaps related to understanding processes that warehouse personnel
+			depended on to function. By looking at the entire supply chain, we began
+			to think about ways to improve efficiency across all areas of the
+			operation. Our WMS product underwent a rebrand and prepared for a growing
+			set of siblings.
+		</h5>
+		<div class="project-image">
+			<img
+				src="./images/logistics/graviton-yard.png"
+				alt="Graviton Yard Screenshot"
+				class="lightbox-trigger"
+				width="100%"
+			/>
+			<h6 class="is-centered"> WebApp - Yard 'Heatmap' View (Angular) </h6>
+		</div>
+		<h5>
+			Dwell time is a critical metric for optimizing logistics operations, as it
+			directly impacts resource utilization, overall efficiency, and business
+			costs. By bringing the entire logistics process onto a unified platform,
+			we were able to collect relevant data on trailers, drivers, and
+			transported goods. Understanding how long resources spend sitting on the
+			yard or in the warehouse allows us to surface assets that have exceeded
+			dwell thresholds or soon will be.
+		</h5>
+		<h5>
+			We broke down supply chain operations into a set of modules that, in
+			addition to warehouse processes, would manage a buiness's yards, transit,
+			fulfillment, etc. These modules could be developed independently and
+			composed to meet the specific needs and scope of our clients' logistics
+			processes. Leaning into my background designing mapping solutions, our
+			first new module was a new yard management system that leveraged
+			geospatial data to optimize trailer operations and improve overall
+			efficiency.
+		</h5>
+		<div class="project-image">
+			<img
+				src="./images/logistics/graviton-warehouse.png"
+				alt="Graviton Warehouse Screenshot"
+				class="lightbox-trigger"
+				width="100%"
+			/>
+			<h6 class="is-centered"> WebApp - Warehouse View (Angular) </h6>
+		</div>
+		<div class="project-image">
+			<img
+				src="./images/logistics/graviton-fulfillment.png"
+				alt="Graviton Fulfillment Screenshot"
+				class="lightbox-trigger"
+				width="100%"
+			/>
+			<h6 class="is-centered"> WebApp - Fulfillment View (Angular) </h6>
+		</div>
+		<div class="project-image">
+			<img
+				src="./images/logistics/graviton-reporting.png"
+				alt="Graviton Reporting Screenshot"
+				class="lightbox-trigger"
+				width="100%"
+			/>
+			<h6 class="is-centered"> WebApp - Reporting View (Angular) </h6>
+		</div>
+	</section>
+	<section class="project-section">
+		<h3>What I Learned</h3>
+		<h5>
+			Moving goods from place to place involves many steps that all need to work
+			together smoothly. I learned that each part of the process, whether it's
+			storing items or shipping them, needs to cleanly inform the other aspects
+			of the business to understand the big picture.
+		</h5>
+		<h5>
+			Including dedicated research and documentation phases benefitted the
+			entire team's understanding of who our product was for and what we were
+			focused on solving. Defining user stories at the start gives you targets
+			to evaluate against. This persists through the design, development,
+			testing, and positioning of the final product.
+		</h5>
+		<h5>
+			Overall, the challenges in the logistics space feel familiar to the
+			chellenges that I've encountered in other industries, including healthcare
+			and real estate. I find that the common challenge for many businesses is
+			adopting a effectve method for managing their resources. Whether working
+			with trailers and their cargos or caregivers and their patients, similar
+			workflows and patterns are applicable. This is an understanding that I
+			have gained through experience which helps me recognize the needs of
+			businesses and their clients independent of industry semantics or
+			marketing buzzwords.
+		</h5>
+	</section>
 </article>
