Update to Logistics

--- a/logistics.html
+++ b/logistics.html
@@ -16,29 +16,6 @@
 			veneer.
 		</h5>
 	</section>
-	<section class="project-section">
-		<h3>What The Heck Is 'Reverse' Logistics?</h3>
-		<h5>
-			While still hard at work on our healthcare platform, our team had the
-			opportunity to design a warehouse management system for a client that
-			provided reverse logistics services for a large retailer. The client was
-			struggling with their existing, ad-hoc inventory management process. Their
-			inefficiency was causing the retailer to question the accuracy of invoices
-			often resulting in delayed payments.
-		</h5>
-	</section>
-	<div class="project-image">
-		<img
-			src="./images/logistics/logistics-header.png"
-			alt="Logistics Header"
-			class="lightbox-trigger"
-			width="100%"
-		/>
-		<h6 class="is-centered">
-			Yard Management module. (showing configuration for multi-module,
-			multi-site)
-		</h6>
-	</div>
 	<div class="project-header">
 		<div class="project-description">
 			<span>
@@ -73,7 +50,28 @@
 			</h6>
 		</div>
 	</div>
+	<div class="project-image">
+		<img
+			src="./images/logistics/logistics-header.png"
+			alt="Logistics Header"
+			class="lightbox-trigger"
+			width="100%"
+		/>
+		<h6 class="is-centered">
+			Yard Management module. (showing configuration for multi-module,
+			multi-site)
+		</h6>
+	</div>
 	<section class="project-section">
+		<h3>What The Heck Is 'Reverse' Logistics?</h3>
+		<h5>
+			While still hard at work on our healthcare platform, our team had the
+			opportunity to design a warehouse management system for a client that
+			provided reverse logistics services for a large retailer. The client was
+			struggling with their existing, ad-hoc inventory management process. Their
+			inefficiency was causing the retailer to question the accuracy of invoices
+			often resulting in delayed payments.
+		</h5>
 		<h5>
 			The project kicked off with a weekend of on-site requirements gathering
 			where the team talked with staff members to learn what challenges they
@@ -160,12 +158,21 @@
 		</h5>
 		<div class="project-image">
 			<img
-				src="./images/logistics/graviton-yard.png"
-				alt="Graviton Yard Screenshot"
+				src="./images/logistics/graviton-metrics.png"
+				alt="Graviton Metrics Screenshot"
 				class="lightbox-trigger"
 				width="100%"
 			/>
-			<h6 class="is-centered"> WebApp - Yard 'Heatmap' View (Angular) </h6>
+			<h6 class="is-centered"> WebApp - Yard Overview (Figma) </h6>
+		</div>
+		<div class="project-image">
+			<img
+				src="./images/logistics/graviton-mobile-metrics.png"
+				alt="Graviton Mobile Metrics Screenshot"
+				class="lightbox-trigger"
+				width="100%"
+			/>
+			<h6 class="is-centered"> Mobile App - Yard Overview (Figma) </h6>
 		</div>
 		<h5>
 			Dwell time is a critical metric for optimizing logistics operations, as it
@@ -176,6 +183,15 @@
 			yard or in the warehouse allows us to surface assets that have exceeded
 			dwell thresholds or soon will be.
 		</h5>
+		<div class="project-image">
+			<img
+				src="./images/logistics/graviton-yard.png"
+				alt="Graviton Yard Screenshot"
+				class="lightbox-trigger"
+				width="100%"
+			/>
+			<h6 class="is-centered"> WebApp - Yard 'Heatmap' View (Angular) </h6>
+		</div>
 		<h5>
 			We broke down supply chain operations into a set of modules that, in
 			addition to warehouse processes, would manage a buiness's yards, transit,
