--- a/index.html
+++ b/index.html
@@ -122,12 +122,18 @@
 					>
 						Project 5
 					</button>
-					<button
+					<!-- <button
 						class="tab-button"
 						data-tab="project6"
 					>
 						Project 6
-					</button>
+					</button> -->
+					<!-- <button
+						class="tab-button"
+						data-tab="project7"
+					>
+						Project 7
+					</button> -->
 				</div>
 				<select
 					id="project-dropdown"
@@ -158,7 +164,7 @@
 				<div
 					class="tab-content"
 					id="project2"
-					data-template="visual-design.html"
+					data-template="logistics.html"
 				></div>
 				<div
 					class="tab-content"
@@ -173,13 +179,18 @@
 				<div
 					class="tab-content"
 					id="project5"
-					data-template="communityview.html"
+					data-template="healthcare.html"
 				></div>
-				<div
+				<!-- <div
 					class="tab-content"
 					id="project6"
-					data-template="logistics.html"
-				></div>
+					data-template="communityview.html"
+				></div> -->
+				<!-- <div
+					class="tab-content"
+					id="project7"
+					data-template="visual-design.html"
+				></div> -->
 			</section>
 		</main>
 		<div
