Reorganizing and renaming

--- a/community-engagement.html
+++ b/community-engagement.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <article class="project">
 	<section class="project-intro">
-		<h2>CommunityView Connect</h2>
+		<h2>Community Engagement</h2>
 		<h5>
-			CommunityView is a web-based mapping application that enables local
-			governments to publish relevant municipal information to the web for easy
-			access by their residents.
+			CommunityView is a mobile application that enables communication between
+			local governments and residents, allowing community members to submit and
+			monitor neighborhood issues while working directly with city departments.
 		</h5>
 	</section>
 	<div class="project-header">
