--- a/design-systems.html
+++ b/design-systems.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <article class="project">
 	<section class="project-intro">
-		<h2>Design Systems and UI Architecture</h2>
+		<h2>Design Systems</h2>
 		<h5>
 			Designing enterprise products at scale requires organization, efficiency,
 			and predictability. I created a design system to provide guidance and
