--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 					<h2>Greg Person</h2>
 					<h6 class="highlight wrap-text">
 						Creative Strategist
-						<span style="color: var(--seahawks-white)">•</span> UX Designer
 						<span style="color: var(--seahawks-white)">•</span> Solutions
 						Engineer
 					</h6>
@@ -72,11 +71,11 @@
 			<nav class="header-nav-row">
 				<div class="main-nav">
 					<a
-						href="#resume"
-						data-tab="resume"
+						href="#profile"
+						data-tab="profile"
 						class="main-nav-link"
 					>
-						Resume&#39;
+						Profile
 					</a>
 					<a
 						href="#projects"
@@ -96,101 +95,78 @@
 						class="tab-button"
 						data-tab="project1"
 					>
-						Project 1
+						Design Systems
 					</button>
 					<button
 						class="tab-button"
 						data-tab="project2"
 					>
-						Project 2
+						Healthcare
 					</button>
 					<button
 						class="tab-button"
 						data-tab="project3"
 					>
-						Project 3
+						Logistics
 					</button>
 					<button
 						class="tab-button"
 						data-tab="project4"
 					>
-						Project 4
+						Real Estate
 					</button>
 					<button
 						class="tab-button"
 						data-tab="project5"
 					>
-						Project 5
+						Public Service
 					</button>
-					<!-- <button
-						class="tab-button"
-						data-tab="project6"
-					>
-						Project 6
-					</button> -->
-					<!-- <button
-						class="tab-button"
-						data-tab="project7"
-					>
-						Project 7
-					</button> -->
 				</div>
 				<select
 					id="project-dropdown"
 					class="tab-dropdown"
 					aria-label="Select Project"
 				>
-					<option value="project1">Project 1</option>
-					<option value="project2">Project 2</option>
-					<option value="project3">Project 3</option>
-					<option value="project4">Project 4</option>
-					<option value="project5">Project 5</option>
-					<option value="project6">Project 6</option>
+					<option value="project1">Design Systems</option>
+					<option value="project5">Healthcare</option>
+					<option value="project2">Logistics</option>
+					<option value="project4">Real Estate</option>
+					<option value="project3">Public Service</option>
 				</select>
 			</div>
 		</header>
 		<main>
 			<section
-				id="resume"
-				data-template="resume.html"
+				id="profile"
+				data-template="profile.html"
 			></section>
 
 			<section id="projects">
 				<div
 					class="tab-content"
 					id="project1"
-					data-template="flan.html"
+					data-template="design-systems.html"
 				></div>
 				<div
 					class="tab-content"
 					id="project2"
-					data-template="logistics.html"
+					data-template="healthcare.html"
 				></div>
 				<div
 					class="tab-content"
 					id="project3"
-					data-template="fieldforce.html"
+					data-template="logistics.html"
 				></div>
 				<div
 					class="tab-content"
 					id="project4"
-					data-template="lvconnect.html"
+					data-template="real-estate.html"
 				></div>
 				<div
 					class="tab-content"
 					id="project5"
-					data-template="healthcare.html"
+					data-template="public-service.html"
 				></div>
-				<!-- <div
-					class="tab-content"
-					id="project6"
-					data-template="communityview.html"
-				></div> -->
-				<!-- <div
-					class="tab-content"
-					id="project7"
-					data-template="visual-design.html"
-				></div> -->
 			</section>
 		</main>
 		<div
