--- a/profile.html
+++ b/profile.html
@@ -2,11 +2,11 @@
 <article class="project">
 	<section class="project-section">
 		<h2>Professional Summary</h2>
-		<h6
-			>Creative technologist with 30+ years of experience directing UX design,
-			UI engineering, application development, video game production, and
-			broadcast animation. Specializing in healthcare, logistics, real estate,
-			global information systems, e-commerce, and entertainment.</h6
+		<h6>
+			Creative technologist with experience directing UX design, UI engineering,
+			application development, video game production, and broadcast animation.
+			Specializing in healthcare, logistics, real estate, global information
+			systems, e-commerce, and entertainment.</h6
 		>
 		<ul>
 			<li
@@ -259,7 +259,7 @@
 			</ul>
 		</div>
 
-		<div class="experience-item">
+		<!-- <div class="experience-item">
 			<h3>GRAFX Group Inc<span class="company-logo">GFX</span></h3>
 			<h5 class="role">Creative Director</h5>
 			<p class="duration">1994 - 1998</p>
@@ -287,7 +287,7 @@
 					Sandiego?" in 1995</li
 				>
 			</ul>
-		</div>
+		</div> -->
 	</section>
 
 	<section class="project-section">
