--- a/public-service.html
+++ b/public-service.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <article class="project">
 	<section class="project-intro">
-		<h2>FieldForce</h2>
+		<h2>Public Service</h2>
 		<h5>
-			FieldForce is a mobile app that is used by field technicians to record the
-			activities associated with their daily assigned tasks.
+			FieldForce is a mobile app that helps field technicians service local
+			communities by tracking and recording their daily tasks. Initially
+			designed for vector control agencies, it enables efficient management of
+			mosquito inspection and treatment activities.
 		</h5>
 	</section>
 	<div class="project-header">
