--- a/real-estate.html
+++ b/real-estate.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <article class="project">
 	<section class="project-intro">
-		<h2>LandVision Connect</h2>
+		<h2>Real Estate</h2>
 		<h5>
 			LandVision is a cloud-based mapping application that helps commercial real
 			estate brokers, builders, and developers find their next
