Updates to Profile

--- a/index.html
+++ b/index.html
@@ -25,11 +25,7 @@
 			<div class="header-top">
 				<section class="header-name">
 					<h2>Greg Person</h2>
-					<h6 class="highlight wrap-text">
-						Creative Strategist
-						<span style="color: var(--seahawks-white)">•</span> Solutions
-						Engineer
-					</h6>
+					<h6 class="highlight wrap-text"> Creative Technologist </h6>
 				</section>
 				<section class="header-body">
 					<section class="social-links">
