--- a/profile.html
+++ b/profile.html
@@ -3,10 +3,10 @@
 	<section class="project-section">
 		<h2>Professional Summary</h2>
 		<h6>
-			Creative technologist with experience directing UX design, UI engineering,
-			application development, video game production, and broadcast animation.
-			Specializing in healthcare, logistics, real estate, global information
-			systems, e-commerce, and entertainment.</h6
+			Creative strategist and solutions engineer experienced directing UX
+			design, UI engineering, application development, video game production,
+			and broadcast animation. Specializing in healthcare, logistics, real
+			estate, global information systems, e-commerce, and entertainment.</h6
 		>
 		<ul>
 			<li
